<resources>
    <string name="app_name">Lab2_LayOut</string>
    <string name="android_1">Android布局实验——约束布局1</string>
    <string name="input">Input</string>
    <string name="_0_0">0.0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="chu">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="chen">×</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="jian">-</string>
    <string name="_0">0</string>
    <string name="pf">*</string>
    <string name="jia">+</string>
    <string name="dian">.</string>
    <string name="dy">=</string>
    <string name="one_one">One,One</string>
    <string name="one_two">One,Two</string>
    <string name="one_three">One,Three</string>
    <string name="one_four">One,Four</string>
    <string name="two_one">Two,One</string>
    <string name="two_two">Two,Two</string>
    <string name="two_three">Two,Three</string>
    <string name="two_four">Two,Four</string>
    <string name="three_one">Three,One</string>
    <string name="three_two">Three,Two</string>
    <string name="three_three">Three,Three</string>
    <string name="three_four">Three,Four</string>
    <string name="four_one">Four,One</string>
    <string name="four_two">Four,Two</string>
    <string name="four_three">Four,Three</string>
    <string name="four_four">Four,Four</string>
    <string name="android">Android布局实验——表格布局</string>
    <string name="hello_tablelayout">Hello TableLayout</string>
    <string name="open">Open...</string>
    <string name="ctrl_o">Ctrl-O</string>
    <string name="save">Save...</string>
    <string name="ctrl_s">Ctrl-S</string>
    <string name="save_as">Save As...</string>
    <string name="ctrl_shift_s">Ctrl-Shift-S</string>
    <string name="importd">Import...</string>
    <string name="export">Export...</string>
    <string name="ctrl_e">Ctrl-E</string>
    <string name="quit">Quit</string>
    <string name="androiddemo">Android布局实验——线性布局</string>
    <string name="space_stations">Space Stations</string>
    <string name="flights">Flights</string>
    <string name="rovers">Rovers</string>
    <string name="dca">DCA</string>
    <string name="depart">DEPART</string>
    <string name="one_way">One Way</string>
    <string name="_1_traveller">1 Traveller</string>
</resources>