<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <!-- 主标题 -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/android_1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 输入区域 -->
    <TextView
        android:id="@+id/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textColor="#000000"
        android:textSize="16sp"
        android:background="#CCCCCC"
        android:padding="12dp"
        android:gravity="end"
        app:layout_constraintStart_toEndOf="@id/input_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_label"
        app:layout_constraintBottom_toBottomOf="@id/input_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- 按钮容器，用于整体控制按钮区域 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/input_label"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <!-- 第一行按钮：7, 8, 9, ÷ -->
        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_7"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_8"
            app:layout_constraintBottom_toTopOf="@id/btn_4"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="6dp"
            android:text="@string/_8"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/btn_5"
            app:layout_constraintEnd_toStartOf="@id/btn_9"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_9"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_divide"
            app:layout_constraintBottom_toTopOf="@id/btn_6"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/chu"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_multiply"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <!-- 第二行按钮：4, 5, 6, × -->
        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_4"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_7"
            app:layout_constraintEnd_toStartOf="@id/btn_5"
            app:layout_constraintBottom_toTopOf="@id/btn_1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_5"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_4"
            app:layout_constraintTop_toBottomOf="@id/btn_8"
            app:layout_constraintEnd_toStartOf="@id/btn_6"
            app:layout_constraintBottom_toTopOf="@id/btn_2"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_6"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_5"
            app:layout_constraintTop_toBottomOf="@id/btn_9"
            app:layout_constraintEnd_toStartOf="@id/btn_multiply"
            app:layout_constraintBottom_toTopOf="@id/btn_3"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/chen"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_6"
            app:layout_constraintTop_toBottomOf="@id/btn_divide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <!-- 第三行按钮：1, 2, 3, + -->
        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_1"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_4"
            app:layout_constraintEnd_toStartOf="@id/btn_2"
            app:layout_constraintBottom_toTopOf="@id/btn_decimal"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_2"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_1"
            app:layout_constraintTop_toBottomOf="@id/btn_5"
            app:layout_constraintEnd_toStartOf="@id/btn_3"
            app:layout_constraintBottom_toTopOf="@id/btn_0"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_3"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_2"
            app:layout_constraintTop_toBottomOf="@id/btn_6"
            app:layout_constraintEnd_toStartOf="@id/btn_add"
            app:layout_constraintBottom_toTopOf="@id/btn_equals"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/jia"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_3"
            app:layout_constraintTop_toBottomOf="@id/btn_multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_subtract"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <!-- 第四行按钮：., 0, =, - -->
        <Button
            android:id="@+id/btn_decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dian"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_1"
            app:layout_constraintEnd_toStartOf="@id/btn_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_decimal"
            app:layout_constraintTop_toBottomOf="@id/btn_2"
            app:layout_constraintEnd_toStartOf="@id/btn_equals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dy"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_0"
            app:layout_constraintTop_toBottomOf="@id/btn_3"
            app:layout_constraintEnd_toStartOf="@id/btn_subtract"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/jian"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btn_equals"
            app:layout_constraintTop_toBottomOf="@id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:layout_margin="6dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 底部导航栏 -->
    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>